@@ -2,6 +2,7 @@
 release 0.14.7
 
 	* fixed deadlock in natpmp
+	* resume data alerts are always posted, regardless of alert mask
 
 release 0.14.6
 
